--- a/src/main/webapp/pages/common/reset.css
+++ b/src/main/webapp/pages/common/reset.css
@@ -34,22 +34,20 @@ div {
 	-webkit-tap-highlight-color: rgba(255, 0, 0, 0);
 }
 
-
 * {
 	margin: 0;
 	padding: 0;
 }
-html{
-	padding: 0 20px ;
+
+html {
+	padding: 0 20px;
 }
 
-
-body {
-	
-	
-	max-width: 100%;
+html body {
+	max-width: 1200px;
 	min-width: 1000px;
 	height: 100%;
+	margin: 0 auto;
 	box-sizing: border-box;
 	/*background: #e7e7e7 ;*/
 	position: relative;
@@ -57,19 +55,20 @@ body {
 	/*font-family: Helvetica,Arial,PingFangSC-Regular,Microsoft Yahei,Verdana,sans-serif;*/
 	font-size: 16px;
 }
-body ul{
+
+body ul {
 	padding: 0;
 	margin: 0;
 }
 
-
-
-table{
+table {
 	margin: 0 !important;
 }
-.color-ccc{
+
+.color-ccc {
 	color: #CCCCCC;
 }
+
 
 /*@media  (min-width:1381px ) {
     body{
@@ -79,6 +78,8 @@ table{
 		width: 15%;
 	}
 }*/
+
+
 /*@media (max-width: 1380px){
 	
 	body{
