--- a/src/main/webapp/pages/common/reset.css
+++ b/src/main/webapp/pages/common/reset.css
@@ -44,18 +44,19 @@ html {
 }
 
 html body {
-	max-width: 1200px;
-	min-width: 1000px;
+	width: 100%;
 	height: 100%;
-	margin: 0 auto;
 	box-sizing: border-box;
-	/*background: #e7e7e7 ;*/
 	position: relative;
 	font-family: '微软雅黑';
 	/*font-family: Helvetica,Arial,PingFangSC-Regular,Microsoft Yahei,Verdana,sans-serif;*/
 	font-size: 16px;
 }
-
+html .bodybox{
+	min-width: 1000px;
+	max-width: 1200px;
+	margin:0 auto;
+}
 body ul {
 	padding: 0;
 	margin: 0;
