--- a/src/main/webapp/pages/index/qm-index.css
+++ b/src/main/webapp/pages/index/qm-index.css
@@ -62,7 +62,7 @@ body {
 	line-height: 50px;
 	text-align: center;
 	color: #acafa6;
-	background: url(../../images/css.png) -500px -8px no-repeat;
+	background: url(../images/css.png) -500px -8px no-repeat;
 }
 
 .main {
