--- a/src/main/webapp/pages/customer/qm-groupsearch.css
+++ b/src/main/webapp/pages/customer/qm-groupsearch.css
@@ -1,9 +1,4 @@
 
-
-table {
-	margin: 0 !important;
-}
-
 /*头部*/
 
 .groupheader {
@@ -16,92 +11,19 @@ table {
 .qm-list {
 	font-size: 18px;
 	font-weight: 600;
-	width: 120px;
+	width: 100%;
 	height: 50px;
 	line-height: 50px;
 	float: left;
 	margin-left: 20px;
 }
 
-.qm-compile {
-	width: 128px;
-	height: 34px;
-	border: 1px solid #CCCCCC;
-	margin-top: 8px;
-	float: left;
-	border-radius: 5px;
-}
-
-.qm-compile select {
-	width: 100%;
-	height: 100%;
-	float: left;
-	border: 0;
-}
-
-.qm-compile-seek input {
-	width: 262px;
-	float: left;
-	border: 0;
-	outline: none;
-	height: 100%;
-}
-
-.qm-compile-seek span {
-	display: inline-block;
-	float: right;
-	width: 36px;
-	height: 32px;
-	background: url(../images/css.png) -174px -16px no-repeat;
-	background-color: #CCCCCC;
-}
-
-.paging {
-	padding: 0 41px;
-	width: 100%;
-	height: 35px;
-	margin-top: 10px;
-}
-
-.paging div {
-	border: 1px solid #ccc;
-	width: 90px;
-	height: 100%;
-	line-height: 33px;
-	float: right;
-	text-align: center;
-	background: #f7f7f7;
-}
-
-.paging .pagingmodle {
-	border: 0;
-	background: #FFFFFF;
-}
-
-.paging .paging-num-box {
-	width: 230px;
-	border: 0;
-	line-height: 32px;
-	background: #FFFFFF;
-}
-
-.paging-num {
-	display: inline-block;
-	width: 31px;
-	margin-right: 8px;
-	border: 1px solid #CCCCCC;
-	float: right;
-	background: #f7f7f7;
-}
-
-
-/**/
 
 .emptydata {
 	min-width: 1000px;
 	margin: auto;
 	/*background: #fff;*/
-	padding-bottom: 20px;
+	/*padding-bottom: 20px;*/
 	box-sizing: border-box;
 }
 
@@ -116,6 +38,7 @@ table {
 }
 
 .groupdata-title {
+	
 	height: 50px;
 	line-height: 50px;
 }
@@ -192,7 +115,9 @@ table {
 .qm-team1-box {
 	padding: 0;
 }
-
+.qm-team1-box .tab-td4{
+	color: red;
+}
 .select-but {
 	margin-top: -5px;
 	margin-right: 30px;
@@ -218,26 +143,27 @@ table {
 	line-height: 40px;
 }
 
-.am-table {
+.qm-team1-box .am-table {
 	margin-bottom: 0;
 }
 
-.del-but-box {
+.data-del-off {
 	clear: both;
 	max-width: 1269px;
 	min-width: 1000px;
 	margin: 10px auto;
-	padding: 0 41px;
+	padding: 10px 41px;
 	box-sizing: border-box;
-	height: 60px;
+	height: 80px;
 }
 
 .del-but {
 	width: 100px;
 	height: 40px;
-	background: #71bcfd;
-	margin: 10px 40px 0 40px;
+	background: #FFF;
+	
 	border: none;
 	float: right;
+	border: 1px solid #CCCCCC;
 	border-radius: 5px;
 }
