--- a/src/main/webapp/pages/management/qm-enterpriselistt.css
+++ b/src/main/webapp/pages/management/qm-enterpriselistt.css
@@ -1,26 +1,51 @@
 
-
 table {
 	margin: 0 !important;
 }
 
-/*头部*/
-
-.groupheader {
+.department-header {
 	min-width: 1000px;
 	height: 42px;
+	padding-left: 20px;
 	margin: 14px 0 11px 0;
 	background: #f2f2f2;
+	
 }
 
+.department-header button {
+	background:#f2f2f2;
+	border: none;
+	font-size: 18px;
+	line-height: initial;
+	text-align: center;
+	color: #535353;
+	outline: none;
+}
+
+.department-but1 {
+	width: 90px;
+	height: 42px;
+}
+.department-but1 a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	color: #000000;
+	text-align: center;
+	line-height: 42px;
+}
+/*头部*/
+
+
+
 .qm-list {
+	
 	font-size: 18px;
 	font-weight: 600;
 	width: 120px;
 	height: 50px;
 	line-height: 50px;
 	float: left;
-	margin-left: 20px;
 }
 
 .qm-compile {
@@ -28,15 +53,34 @@ table {
 	height: 34px;
 	border: 1px solid #CCCCCC;
 	margin-top: 8px;
+	padding-left: 10px;
 	float: left;
 	border-radius: 5px;
 }
 
-.qm-compile select {
-	width: 100%;
-	height: 100%;
+.qm-compile-but {
+	display: block;
+	width: 80px;
+	line-height: 34px;
 	float: left;
-	border: 0;
+}
+
+.compile-icon {
+	display: block;
+	width: 20px;
+	height: 20px;
+	margin-top: 10px;
+	float: right;
+	background: url(../../images/compile.png) no-repeat;
+}
+
+.qm-compile-seek {
+	width: 300px;
+	height: 34px;
+	border: 1px solid #CCCCCC;
+	border-radius: 5px;
+	margin-top: 8px;
+	float: right;
 }
 
 .qm-compile-seek input {
@@ -52,14 +96,14 @@ table {
 	float: right;
 	width: 36px;
 	height: 32px;
-	background: url(../images/css.png) -174px -16px no-repeat;
+	background:url(../../images/css.png) -175px -15px no-repeat;
 	background-color: #CCCCCC;
 }
 
 .paging {
 	padding: 0 41px;
 	width: 100%;
-	height: 35px;
+	height: 32px;
 	margin-top: 10px;
 }
 
@@ -67,7 +111,7 @@ table {
 	border: 1px solid #ccc;
 	width: 90px;
 	height: 100%;
-	line-height: 33px;
+	line-height: 32px;
 	float: right;
 	text-align: center;
 	background: #f7f7f7;
@@ -81,7 +125,7 @@ table {
 .paging .paging-num-box {
 	width: 230px;
 	border: 0;
-	line-height: 32px;
+	line-height: 30px;
 	background: #FFFFFF;
 }
 
@@ -108,7 +152,10 @@ table {
 .Corporationlist {
 	margin-top: 10px;
 	background: #fff;
+	/*border: 1px solid #e7e7e7;*/
 	border-radius: 5px;
+	/*height: 558px;*/
+
 }
 
 .qm-team {
@@ -116,6 +163,7 @@ table {
 }
 
 .groupdata-title {
+	border-bottom: 3px solid #03afef;
 	height: 50px;
 	line-height: 50px;
 }
@@ -203,7 +251,7 @@ table {
 	padding: 0 0 0 5px;
 	border: 0;
 	text-align: center;
-	border-top: 2px solid #00abea;
+	
 	border-bottom: 1px solid #CCCCCC;
 	background: #e6e6e6;
 	line-height: 40px;
