--- a/src/main/webapp/pages/management/qm-index.css
+++ b/src/main/webapp/pages/management/qm-index.css
@@ -60,7 +60,7 @@ body {
 	line-height: 58px;
 	text-align: center;
 	color: #acafa6;
-	background: url(../../images/css.png) -500px -8px no-repeat;
+	background: url(../images/css.png) -500px -8px no-repeat;
 }
 .main {
 	width: 100%;
