--- a/src/main/webapp/pages/common/reset.css
+++ b/src/main/webapp/pages/common/reset.css
@@ -39,16 +39,17 @@ div {
 	padding: 0;
 }
 
-html {
-	padding: 0 20px;
-}
+/*html {*/
+	/*padding: 0 20px;*/
+/*}*/
 
-html body {
+ body {
 	width: 100%;
 	height: 100%;
 	box-sizing: border-box;
 	position: relative;
 	font-family: '微软雅黑';
+	padding: 0 20px;
 	/*font-family: Helvetica,Arial,PingFangSC-Regular,Microsoft Yahei,Verdana,sans-serif;*/
 	font-size: 16px;
 }
