--- a/src/main/webapp/pages/management/qm-managementLogin.css
+++ b/src/main/webapp/pages/management/qm-managementLogin.css
@@ -63,7 +63,7 @@ background:rgba(255,255,255,0.8);
 	height: 20px;
 	margin: 11px 10px;
 	float: left;
-	background: url(../../images/username.png) no-repeat;
+	background: url(../images/username.png) no-repeat;
 }
 
 .Login-icon-password {
@@ -72,7 +72,7 @@ background:rgba(255,255,255,0.8);
 	height: 20px;
 	margin: 8px 10px;
 	float: left;
-	background: url(../../images/password.png) no-repeat;
+	background: url(../images/password.png) no-repeat;
 }
 
 .Login-input {
