--- a/src/main/webapp/pages/friend/qm-friend.css
+++ b/src/main/webapp/pages/friend/qm-friend.css
@@ -344,7 +344,7 @@ body {
 	height: 20px;
 	margin-top: 0;
 	border: 0;
-	background: url(../../images/uncheck.jpg) no-repeat;
+	background: url(../images/uncheck.jpg) no-repeat;
 }
 
 .seek-list .seek-logo img {
@@ -483,7 +483,7 @@ body {
 }
 
 .recommend-friend-top {
-	width: 778;
+	width: 778px;
 	height: 191px;
 	padding: 30px 0;
 	margin-bottom: 35px;
@@ -1038,6 +1038,7 @@ body {
 
 .chatroom-font-size {
 	font-size: 16px;
+	word-wrap: break-word;
 }
 
 .chatroom-title {
