--- a/src/main/webapp/pages/management/qm-member.css
+++ b/src/main/webapp/pages/management/qm-member.css
@@ -143,12 +143,12 @@
 }
 
 .newdata-picture {
-	width: 306px;
-	height: 168px;
+	width: 310px;
+	height: 170px;
 	border: 1px dashed #999999;
 	float: left;
 	margin-right: 150px;
-	margin-bottom: 20px;
+	margin-bottom: 35px;
 	background: #FFFFFF;
 	position: relative;
 }
@@ -163,6 +163,12 @@
 .newdata-picture img {
     width: 100%;
     height: 100%;
+}
+.newdata-picture .plan-bar{
+	font-size: 12px;
+	padding-top: 15px;
+	position: absolute;
+	bottom: -25px;
 }
 .img-cont-box .clickoff{
     display: none;
@@ -186,16 +192,21 @@
     left: 0;
 }
 .newdata-picture .newdata-picture-i {
+	position: absolute;
+	top: 33%;
+	left: 33%;
 	display: block;
-	width: 120px;
-	height: 50px;
-	background: #cccccc;
-	
-	border-radius: 5px;
-	margin: 55px auto;
-	font-style: normal;
-	line-height: 50px;
-	text-align: center;
+	width: 100px;
+	height: 60px;	
+	border-radius: 5px;	
+	background: #CCCCCC;
+}
+.newdata-picture-i .picture-i-bg{
+	display: block;
+	width: 40px;
+	height: 40px;
+	margin:  10px 30px;
+	background: url(../images/css.png)  -535px -15px no-repeat;
 }
 .webuploader-pick{
     width: 100%;
