--- a/src/main/webapp/pages/management/qm-index.css
+++ b/src/main/webapp/pages/management/qm-index.css
@@ -55,7 +55,7 @@ body {
 	font-size: 20px;
 }
 .qm-quit .qm-index-off{
-	width: 100%;
+	width: 30px;
 	height: 100%;
 	line-height: 58px;
 	text-align: center;
