--- a/src/main/webapp/pages/group/qm-groupseeklistt.css
+++ b/src/main/webapp/pages/group/qm-groupseeklistt.css
@@ -2,61 +2,19 @@
 
 .qm-header {
 	height: 42px;
-margin-top: 10px;
+	margin-top: 10px;
 	background: #f2f2f2;
-	
 }
 
-.qm-c-p {
-	margin-bottom: 16px;
-	font-size: 18px;
-}
-
-.paging {
-	padding: 0 41px;
+.qm-list {
 	width: 100%;
-	height: 30px;
-	margin-top: 10px;
-}
-
-.paging div {
-	border: 1px solid #ccc;
-	width: 90px;
-	float: right;
-	text-align: center;
-}
-
-.paging .pagingmodle {
-	border: 0;
-}
-
-
-/**/
-
-.emptydata {
-	min-width: 1000px;
-	margin: auto;
-	/*background: #fff;*/
-	padding-bottom: 20px;
-	box-sizing: border-box;
-}
-
-.Corporationlist {
-	margin-top: 10px;
-	background: #fff;
-	border: 1px solid #e7e7e7;
-	border-radius: 5px;
-	/*height: 558px;*/
+	height: 50px;
+	line-height: 50px;
+	margin-left: 20px;
 }
 
 .qm-team {
 	margin: 0px 41px 0 41px;
-}
-
-.groupdata-title {
-	border-bottom: 3px solid #03afef;
-	height: 50px;
-	line-height: 50px;
 }
 
 .qm-team-txt {
@@ -123,13 +81,13 @@ margin-top: 10px;
 
 .qm-team1-tab {
 	height: 43px;
+	padding: 0 30px 0 30px !important;
 	border-bottom: 0;
 	border-radius: 5px;
-	/*	background: #f7f7f7;*/
 }
 
 .qm-team1-box {
-	/*background: #f7f7f7;*/
+	padding: 0;
 }
 
 .select-but {
@@ -137,49 +95,47 @@ margin-top: 10px;
 	margin-right: 30px;
 }
 
-.Corporationlist .qm-team1 th {
+.bodybox .qm-team1 tr th {
+	width: 16.66%;
 	padding: 0 0 0 5px;
 	border: 0;
+	text-align: center;
+	border-top: 2px solid #00abea;
 	border-bottom: 1px solid #CCCCCC;
 	background: #e6e6e6;
-	height: 40px;
 	line-height: 40px;
-	width: 20%;
+	font-weight: 100;
 }
 
-.Corporationlist .qm-team1 tr td {
+.bodybox .qm-team1 tr td {
+	width: 16.66%;
 	padding: 0 0 0 5px;
 	border: 0;
+	text-align: center;
 	border-bottom: 1px solid #CCCCCC;
-	background: #FFFFFF;
-	height: 40px;
 	line-height: 40px;
-	width: 20%;
 }
-.Corporationlist .qm-team1 tr .list-th1 {
 
-	padding-left: 40px;
-}
-.am-table {
+.qm-team1-box .am-table {
 	margin-bottom: 0;
 }
 
-.del-but-box {
+.data-del-off {
 	clear: both;
 	max-width: 1269px;
 	min-width: 1000px;
 	margin: 10px auto;
-	padding: 0 41px;
+	padding: 10px 41px;
 	box-sizing: border-box;
-	height: 60px;
+	height: 80px;
 }
 
 .del-but {
 	width: 100px;
 	height: 40px;
-	background: #71bcfd;
-	margin: 10px 40px 0 40px;
+	background: #FFF;
 	border: none;
 	float: right;
+	border: 1px solid #CCCCCC;
 	border-radius: 5px;
 }
