--- a/src/main/webapp/pages/group/qm-seolist.css
+++ b/src/main/webapp/pages/group/qm-seolist.css
@@ -1,143 +1,147 @@
-
 /*头部*/
-
 .qm-header {
-	height: 62px;
-	margin: 14px 0 11px 0;
-	background: #1468ff;
-	border-bottom: 2px solid #00ff7b;
+    height: 42px;
+    margin-top: 10px;
+    background: #f2f2f2;
 }
 
 .companylist {
-	display: block;
-	min-width: 1000px;
-	max-width: 1267px;
-	box-sizing: border-box;
-	margin: 10px auto;
-	border: 1px solid #fff;
-	border-radius: 5px;
-	background: #fff;
+    display: block;
+    min-width: 1000px;
+    max-width: 1267px;
+    box-sizing: border-box;
+    margin: 10px auto;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    background: #fff;
 }
 
 .qm-c-company {
-	margin: 20px 41px 16px 41px;
+    margin: 20px 41px 16px 41px;
 }
 
 .qm-c-p {
-	margin-bottom: 16px;
-	font-size: 18px;
+    margin-bottom: 16px;
+    font-size: 18px;
 }
 
 .qm-c-ul {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	max-height: 200px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-height: 200px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 .qm-c-li {
-	width: 100%;
-	height: 40px;
-	line-height: 40px;
-	padding-left: 15px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 15px;
+}
+
+.qm-c-li .list-a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
 }
 
 .qm-c-li:hover {
-	border-top: 1px solid #CCC;
-	border-bottom: 1px solid #CCC;
-	background: #8bdbff;
+    border-top: 1px solid #CCC;
+    border-bottom: 1px solid #CCC;
+    background: #8bdbff;
 }
 
 .qm-team {
-	margin: 0px 41px 0 41px;
+    margin: 0px 41px 0 41px;
 }
 
 .qm-team-txt {
-	padding-top: 10px;
+    padding-top: 10px;
 }
 
 .qm-team input {
-	padding: 0;
-	border: 0;
-	border-radius: 5px;
-	background: #fff;
-	height: 30px;
+    padding: 0;
+    border: 0;
+    border-radius: 5px;
+    background: #fff;
+    height: 30px;
 }
 
 .qm-team-input {
-	height: 54px;
-	padding-top: 13px;
+    height: 54px;
+    padding-top: 13px;
 }
 
 .qm-team-input span {
-	display: inline-block;
-	width: 10%;
-	padding: 3px 0 0 0;
-	text-align: center;
+    display: inline-block;
+    width: 10%;
+    padding: 3px 0 0 0;
+    text-align: center;
 }
 
 .qm-c-compile {
-	height: 120px;
+    height: 120px;
 }
 
 .qm-c-compile1 {
-	width: 65px;
-	height: 30px;
-	background: #71bcfd;
-	line-height: 30px;
-	text-align: center;
-	border-radius: 5px;
+    width: 65px;
+    height: 30px;
+    background: #71bcfd;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 5px;
 }
 
 .qm-time-but {
-	border: none;
-	float: right;
-	width: 15%;
-	height: 100%;
-	padding: 0;
-	background: #fff;
+    border: none;
+    float: right;
+    width: 15%;
+    height: 100%;
+    padding: 0;
+    background: #fff;
 }
 
 .qm-time-but:hover {
-	background: #fff;
+    background: #fff;
 }
 
 .paging {
-	padding: 0 41px;
-	width: 100%;
-	height: 30px;
-	margin-top: 10px;
+    padding: 0 41px;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
 }
 
 .paging div {
-	border: 1px solid #ccc;
-	width: 90px;
-	float: right;
-	text-align: center;
+    border: 1px solid #ccc;
+    width: 90px;
+    float: right;
+    text-align: center;
 }
 
 .paging .pagingmodle {
-	border: 0;
+    border: 0;
 }
 
 .del-but-box {
-	clear: both;
-	max-width: 1269px;
-	min-width: 1000px;
-	margin: 10px auto;
-	padding: 0 41px;
-	box-sizing: border-box;
-	height: 60px;
+    clear: both;
+    max-width: 1269px;
+    min-width: 1000px;
+    margin: 10px auto;
+    padding: 0 41px;
+    box-sizing: border-box;
+    height: 60px;
 }
 
 .del-but {
-	width: 100px;
-	height: 40px;
-	background: #71bcfd;
-	margin: 10px 40px 0 40px;
-	border: none;
-	float: right;
-	border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    background: #71bcfd;
+    margin: 10px 40px 0 40px;
+    border: none;
+    float: right;
+    border-radius: 5px;
 }
