--- a/src/main/webapp/pages/mall/goods/qm-goodslist.css
+++ b/src/main/webapp/pages/mall/goods/qm-goodslist.css
@@ -65,7 +65,7 @@
 	width: 40px;
 	height: 32px;
 	cursor: pointer;
-	background: url(../../../images/seo.jpg) no-repeat;
+	background: url(../../images/seo.jpg) no-repeat;
 }
 
 .header-title {
