--- a/src/main/webapp/pages/mall/goods/qm-branchgoodsdetails.css
+++ b/src/main/webapp/pages/mall/goods/qm-branchgoodsdetails.css
@@ -36,20 +36,14 @@
     display: inline-block;
     text-align: center;
     line-height: 34px;
-    border: 1px solid #ccc;
-    padding: 0 10px;
-    margin-left: 30px;
-    background-color: #f1f0f5;
-    color: #000;
 }
 
-.goods-box1-2 input {
+.goods-box1 .goods-box1-2 input {
     padding: 0;
     height: 34px;
     border: 1px solid #9d9d9d;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
     border-radius: 2px;
+    background: #FFFFFF;
 }
 
 .goodssize {
@@ -65,17 +59,18 @@
 }
 
 .goodssize table th {
-    padding: 10px 10px 10px 15px;
+    padding: 10px 14px 5px 30px;
 }
 
 .goodssize table td {
-
     padding: 10px 14px 5px 14px;
 }
 
 .goodssize table td input {
     width: 100%;
     height: 100%;
+    border: 1px solid #ccc;
+    background: #FFFFFF;
 }
 
 .goodssize table .tab4 {
@@ -83,28 +78,16 @@
     min-width: 120px;
 }
 
-.goodssize table .tab4-span {
-    display: block;
-    width: 100px;
-    height: 100%;
-    text-align: center;
-    color: #02b4fe;
-    cursor: pointer;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-}
-
 .goodssize table .tab4-a {
     display: block;
     width: 100px;
     height: 100%;
-    color: #02b4fa;
+    color: red;
     text-align: center;
 }
 
 .goodssize table .tab4-a:hover {
-   color: red;
+    background: #b7b7b7;
 }
 
 .attr-list-body {
@@ -252,7 +235,7 @@
 .del-but {
     width: 100px;
     height: 40px;
-    background: #f1f0f5;
+    background: #FFF;
     margin: 10px 0px 0 40px;
     border: none;
     float: right;
@@ -262,28 +245,6 @@
     border-radius: 5px;
 }
 
-/*--------------*/
-
-.add-after {
-    width: 100%;
-    height: 60px;
-}
-
-.add-after .add-but {
-    text-align: center;
-    width: 60px;
-    height: 60px;
-    /*list-style: none;*/
-    margin: auto;
-}
-
-.add-after .add-but button {
-    padding: 0;
-    width: 60px !important;
-    display: inline-block !important;
-    margin-top: -5px;
-}
-
 #poput_but {
     display: block;
     border: none;
@@ -291,79 +252,6 @@
     height: 100%;
     color: #222222;
     background: #ececec;
-}
-
-.clear {
-    width: 100%;
-    height: 100%;
-}
-
-.container .before,
-.container .after {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    transition-duration: 0s;
-    -webkit-transition-duration: 0s;
-    -moz-transition-duration: 1s;
-    -o-transition-duration: 1s;
-}
-
-/*默认行为*/
-
-.container .before {
-    left: 0px;
-}
-
-.container .after {
-    left: 100%;
-}
-
-.container:hover .before {
-    left: -100%;
-}
-
-.container:hover .after {
-    left: 0%;
-}
-
-.container.demo8 .before {
-    left: 0px;
-}
-
-.container.demo8 .after {
-    left: 0%;
-    -webkit-transform: scale(0);
-}
-
-.container.demo8:hover .before {
-    width: 322px;
-    height: 60px;
-    -webkit-transform: scale(0);
-}
-
-.container.demo8:hover .after {
-    width: 322px;
-    height: 60px;
-    -webkit-transform: scale(1);
-}
-
-.a-shade {
-    z-index: 200;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    background: #000;
-    filter: alpha(opacity=70);
-    -moz-opacity: 0.7;
-    opacity: 0.7;
 }
 
 .imgbox {
@@ -392,27 +280,6 @@
     width: 100%;
     height: 100%;
     max-height: 140px;
-}
-
-.imgbox .b-shade {
-    position: absolute;
-    bottom: -30px;
-    width: 97%;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    color: #fff;
-    background: #000;
-    filter: alpha(opacity=70);
-    -moz-opacity: 0.7;
-    opacity: 0.7;
-}
-
-.imgbox:hover .b-shade {
-    animation: shade .1s forwards;
-    -moz-animation: shade .1s forwards;
-    -webkit-animation: shade .1s forwards;
-    -o-animation: mymove 5s infinite;
 }
 
 .finish:hover {
@@ -461,20 +328,7 @@
     padding: 0 10px;
 }
 
-.add-picture li .add-off {
-    display: none;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    text-align: center;
-    line-height: 20px;
-    right: 10px;
-    z-index: 220;
-    cursor: pointer;
-    background: red;
-}
-
-.add-picture li .add-one {
+.add-picture li .add-two {
     position: relative;
     display: block;
     width: 100%;
@@ -482,33 +336,25 @@
     text-align: center;
     line-height: 140px;
     background: #FFFFFF;
-    border: 1px solid #ccc;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
 }
 
-.add-picture li .add-one a {
+.a-shade {
+    z-index: 200;
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    display: block;
-}
-
-.add-picture li .add-two {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     width: 100%;
-    height: 100%;
-    /*float: left;*/
+    height: 30px;
     text-align: center;
-    line-height: 140px;
-    overflow: hidden;
-    padding: 0 10px;
+    line-height: 30px;
+    color: #fff;
+    background: #000;
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
 }
 
 .add-picture li .add-two img {
@@ -522,41 +368,7 @@
     width: 60px;
     height: 60px;
     font-size: 42px;
-    margin-top: 60px;
-}
-
-.add-picture li .add-two .b-shade {
-    position: absolute;
-    bottom: -30px;
-    width: 90%;
-    height: 30px;
-    /*text-align: center;*/
-    line-height: 30px;
-    background: #000;
-    color: #fff;
-    filter: alpha(opacity=70);
-    /*IE滤镜，透明度50%*/
-    -moz-opacity: 0.7;
-    /*Firefox私有，透明度50%*/
-    opacity: 0.7;
-    /*其他，透明度50%*/
-}
-
-.b-shade .left {
-    width: 30px;
-    float: left;
-    font-style: normal;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.b-shade .right {
-    width: 30px;
-    float: right;
-    font-style: normal;
-    display: inline-block;
-    cursor: pointer;
-
+    margin-top: 40px;
 }
 
 .add-picture li .add-two:hover .b-shade {
@@ -574,129 +386,4 @@
     top: -50px;
     width: 90%;
     margin: auto;
-}
-
-@keyframes shade {
-    0% {
-        bottom: -30px;
-    }
-    100% {
-        bottom: 0px;
-    }
-}
-
-@-moz-keyframes shade
-    /* Firefox */
-
-{
-    0% {
-        bottom: -30px;
-    }
-    100% {
-        bottom: 0px;
-    }
-}
-
-@-webkit-keyframes shade
-    /* Safari and Chrome */
-
-{
-    0% {
-        bottom: -30px;
-    }
-    100% {
-        bottom: 0px;
-    }
-}
-
-@-o-keyframes shade
-    /* Opera */
-
-{
-    0% {
-        bottom: -30px;
-    }
-    100% {
-        bottom: 0px;
-    }
-}
-
-.prompt-box {
-    display: none;
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /*background: rgba(0, 0, 0, 0.1);*/
-}
-
-.pop-one {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    width: 500px;
-    margin: -250px 0 0 -250px;
-    z-index: 25;
-}
-
-.pop-one1 {
-    height: 200px;
-    margin: -180px 0 0 -180px;
-    background: #FFFFFF;
-    border: 1px solid #ccc;
-}
-
-.prompt-title {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #02b4fe;
-}
-
-.prompt-frame1 {
-    height: 110px;
-    line-height: 110px;
-    text-align: center;
-    font-size: 20px;
-    border-bottom: 1px solid #fff;
-}
-
-.prompt-frame2 {
-    box-sizing: border-box;
-    width: 100%;
-    height: 40px;
-}
-
-.prompt-frame-box {
-    width: 240px;
-    margin: auto;
-}
-
-.prompt-frame2 .prompt-frame-left {
-    height: 40px;
-    width: 100px;
-    cursor: pointer;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    float: left;
-    border: 1px solid #cccccc;
-    background: #f1f0f5;
-}
-
-.prompt-frame2 .prompt-frame-right {
-    height: 40px;
-    width: 100px;
-    cursor: pointer;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    float: right;
-    border: 1px solid #cccccc;
-
-    background: #f1f0f5;
 }
