--- a/src/main/webapp/pages/management/qm-enterpriselistt.css
+++ b/src/main/webapp/pages/management/qm-enterpriselistt.css
@@ -8,12 +8,12 @@ table {
 	height: 42px;
 	padding-left: 20px;
 	margin: 14px 0 11px 0;
-	background: #f2f2f2;
+	background: #f5f5f5;
 	
 }
 
 .department-header button {
-	background:#f2f2f2;
+	background:#f5f5f5;
 	border: none;
 	font-size: 18px;
 	line-height: initial;
@@ -21,10 +21,22 @@ table {
 	color: #535353;
 	outline: none;
 }
-
+.department-header button:hover{
+	background:#d9d9d9 ;
+}
 .department-but1 {
-	width: 90px;
+	position: relative;
+	width: 120px;
 	height: 42px;
+	padding-left: 25px;
+}
+.department-but1 .but-i{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 25px;
+	height: 25px;
+	background: url("../images/css.png") -255px -196px no-repeat;
 }
 .department-but1 a{
 	display: block;
@@ -34,12 +46,12 @@ table {
 	text-align: center;
 	line-height: 42px;
 }
+
+
 /*头部*/
 
-
-
 .qm-list {
-	
+	padding-left: 20px;
 	font-size: 18px;
 	font-weight: 600;
 	width: 120px;
