--- a/src/main/webapp/pages/customer/qm-cooperationlist.css
+++ b/src/main/webapp/pages/customer/qm-cooperationlist.css
@@ -70,7 +70,7 @@
 .site-li input {
     height: 100%;
     padding: 0;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #fff;
     border-radius: 5px;
     background-color: #ffffff;
 }
@@ -79,13 +79,13 @@
     position: relative;
     height: 100%;
     padding: 0;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #fff;
     border-radius: 5px;
     background-color: #ffffff;
 }
 
 .sel-box select {
-
+    display: none;
     width: 100%;
     height: 100%;
     border: 0;
