--- a/src/main/webapp/pages/customer/qm-sitemessageone.css
+++ b/src/main/webapp/pages/customer/qm-sitemessageone.css
@@ -16,6 +16,7 @@ display: none;
     cursor: pointer;
     margin-left: 25px;
 }
+
 .site-header-i{
     position: absolute;
     top: 12px;
@@ -119,11 +120,12 @@ display: none;
 
 .site-compile {
     display: none;
-    width: 100px;
+    width: 80px;
+    height: 34px;
     margin: 10px 0 0px 30px;
     float: right;
     background: #FFFFFF;
-    line-height: 40px;
+    line-height:34px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -189,73 +191,18 @@ display: none;
 .but {
     width: 80px;
     height: 34px;
-    background: #FFF;
+    background: #f1f0f5;
     margin: 10px 0px 0 30px;
     float: right;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
 }
-
-/*table {*/
-    /*margin: 0 !important;*/
-/*}*/
-
-/*.site-title {*/
-    /*height: 50px;*/
-    /*line-height: 50px;*/
-    /*border-bottom: 2px solid #02b4fe;*/
-/*}*/
-
-/*.site-title div {*/
-    /*font-size: 18px;*/
-    /*font-weight: 600;*/
-    /*width: 120px;*/
-    /*height: 50px;*/
-    /*line-height: 50px;*/
-    /*float: left;*/
-    /*margin-left: 20px;*/
-/*}*/
-
-.paging {
-
-    width: 100%;
-    height: 35px;
-    margin-top: 10px;
+.but:hover{
+    background: #ffffff;
+    border-color:#1f8fff;
+    color: #1f8fff;
 }
 
-.paging div {
-    border: 1px solid #ccc;
-    width: 90px;
-    height: 100%;
-    line-height: 33px;
-    float: right;
-    text-align: center;
-    background: #f7f7f7;
-}
-
-.paging .pagingmodle {
-    border: 0;
-    background: #FFFFFF;
-}
-
-.paging .paging-num-box {
-    width: 230px;
-    border: 0;
-    line-height: 32px;
-    background: #FFFFFF;
-}
-
-.paging-num {
-    display: inline-block;
-    width: 31px;
-    margin-right: 8px;
-    border: 1px solid #CCCCCC;
-    float: right;
-    background: #f7f7f7;
-}
-.paging-checked {
-    background: #71bcfd;
-}
 .goback {
     margin-left: 30px;
 }
