--- a/src/main/webapp/pages/index/qm-indexLogin.css
+++ b/src/main/webapp/pages/index/qm-indexLogin.css
@@ -1,20 +1,22 @@
 body {
 	min-width: 1100px;
+	min-height: 800px;
 }
 
 .opacity-box {
+	position: absolute;
+	top: 165px;
+	right: 200px;
 	width: 420px;
 	height: 540px;
-	margin: 165px 60px;
 	padding: 10px;
 	float: right;
 	overflow: hidden;
-	position: relative;
 	background: rgba(255, 255, 255, 0.2);
 }
 
 .Login {
-	width: 100%x;
+	width: 100%;
 	height: 520px;	
 	background: rgba(255, 255, 255, 1);
 }
@@ -164,4 +166,27 @@ body {
 .pop-frame2-but div:nth-child(2){
 	 float: right;
     margin-right: 80px;	
+}
+.footer-box{
+	width: 100%;
+	height: 40px;
+}
+.footer-div{
+	position: relative;
+	width: 210px;
+	margin: 0 auto;
+	text-align: center;
+}
+.footer-div a{
+	display: inline-block;
+}
+.police-ionic{
+	position: absolute;
+	top: 3px;
+	right: 0;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background: url("../images/police.png");
+
 }
