--- a/src/main/webapp/pages/management/qm-departments.css
+++ b/src/main/webapp/pages/management/qm-departments.css
@@ -16,6 +16,7 @@
 .qm-teambox {
     width: 100%;
     height: 44px;
+    padding-left: 37px;
 }
 
 .qm-team-input {
@@ -60,36 +61,44 @@
 
 .branch-name {
     float: left;
-    width: 15%;
     height: 30px;
     line-height: 30px;
     text-align: center;
-    min-width: 90px;
-    margin: 0 0 0 20px;
 }
 
 .jurisdiction-box {
     width: 100%;
-    height: 42px;
+    height: 60px;
+    padding-left: 37px;
+    padding-top: 9px;
+    background: #f5f5f5;
 }
 
 .jurisdiction-but {
-    width: 100px;
+    position: relative;
+    width: 120px;
+
     line-height: 40px;
-    margin: 0 0 0 20px;
     text-align: center;
     border: 1px solid #a0a0a0;
+    background: #ffffff;
+}
+.jurisdiction-but:hover{
     background: #cccccc;
 }
-
+.jurisdiction-but .but-i{
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    width: 25px;
+    height: 25px;
+    background: url("../images/css.png") -255px -196px no-repeat;
+}
 .position {
-    background: #e6e6e6;
-    padding: 10px 41px;
+    /*background: #e6e6e6;*/
+    /*padding: 10px 41px;*/
 }
 
-.position-but {
-    background: #FFFFFF;
-}
 
 .position-contbox {
     width: 100%;
