--- a/src/main/webapp/pages/management/qm-member.css
+++ b/src/main/webapp/pages/management/qm-member.css
@@ -47,10 +47,8 @@
 
 .newdata .qm-team-input span {
     display: inline-block;
-    width: 30%;
     line-height: 34px;
     padding: 0;
-    margin: 0 0 0 20px;
     float: left;
     padding-right: 5px;
 }
@@ -74,8 +72,10 @@
     line-height: 50px;
 }
 
-.qm-team div {
-    padding: 0;
+.header-title {
+    font-size: 18px;
+    font-weight: 600;
+    padding-left: 20px;
 }
 
 .qm-team input {
@@ -100,9 +100,7 @@
 .qm-team-input span {
     text-align: right;
     display: inline-block;
-    width: 30%;
     padding: 3px 0 0 0;
-    margin: 2px 0 0 20px;
 }
 
 .qm-team-input input {
@@ -253,28 +251,32 @@
 .member-title {
     width: 100%;
     height: 42px;
-    background: #e6e6e6;
+    line-height: 42px;
+    padding-left: 37px;
+    background: #f1f0f5;
 }
 
-.member-title-left {
-    width: 110px;
-    line-height: 34px;
-    float: left;
-    text-align: center;
-    background: #FFFFFF;
-    margin: 6px 0 0 20px;
-    border: 1px solid #CCCCCC;
-    border-bottom-color: #FFFFFF;
-}
+/*.member-title-left {*/
+    /*width: 110px;*/
+    /*line-height: 34px;*/
+    /*float: left;*/
+    /*text-align: center;*/
+    /*!*background: #FFFFFF;*!*/
+    /*margin: 6px 0 0 20px;*/
+    /*!*border: 1px solid #CCCCCC;*!*/
+    /*border-bottom-color: #FFFFFF;*/
+/*}*/
 
 .member-title-right {
-    width: 110px;
-    line-height: 34px;
-    float: right;
+    width: 140px;
+    height: 34px;
     text-align: center;
     background: #FFFFFF;
-    margin: 4px 20px 0 0;
+    line-height: 34px;
+    margin-top: 30px;
     border: 1px solid #CCCCCC;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .qm-team .newdata-picture-box {
@@ -307,14 +309,6 @@
     font-size: 14px;
 }
 
-.duty-title {
-    width: 100%;
-    line-height: 40px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #3e424d;
-}
-
 .duty-box {
     display: none;
     z-index: 999;
@@ -330,48 +324,16 @@
     border-bottom: 1px solid #fff;
 }
 
-.duty-input {
-    width: 100%;
-    height: 60px;
-    padding: 14px 0 14px 30px;
-}
-
-.duty-input span {
-    display: inline-block;
-    width: 90px;
-    text-align: center;
-}
-
-.duty-input input {
-    width: 50%;
-}
-
 .duty-frame2 {
     box-sizing: border-box;
     width: 100%;
     height: 40px;
+
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.duty-frame-box {
-    width: 240px;
-    margin: auto;
-}
-
-.duty-frame2 .duty-frame-left {
-    height: 40px;
-    width: 100px;
-    cursor: pointer;
-    line-height: 40px;
-    text-align: center;
-    font-size: 20px;
-    float: left;
-    border: 1px solid #CCCCCC;
-    background: #FFFFFF;
-}
-
-.duty-frame2 .duty-frame-right {
+.duty-frame2 .duty-frame-but {
     height: 40px;
     width: 100px;
     cursor: pointer;
@@ -379,22 +341,45 @@
     text-align: center;
     font-size: 20px;
     float: right;
-    border: 1px solid #CCCCCC;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
     background: #FFFFFF;
+    margin-left: 30px;
 }
 
 .department-power {
     display: none;
 }
 
-/*.duty-box table tr .describe-td-1 {*/
-    /*vertical-align: middle;*/
-/*}*/
+.am-table {
+    border-collapse: collapse;
+    margin-bottom: 0;
+    border-bottom: 1px solid #cccccc;
+}
 
-/*.duty-box .duty-one table tr:last-child {*/
-    /*border-bottom: 1px solid #CCCCCC;*/
-/*}*/
+.am-table tr:first-child {
+    background: #f1f0f5;
+}
 
-/*.duty-describe {*/
-    /*display: block;*/
-/*}*/
+.am-table tr th:first-child {
+    padding-left: 37px;
+}
+
+.am-table tr td:first-child {
+    padding-left: 37px;
+}
+
+.table tr:last-child td {
+    border-bottom: 1px solid #CCCCCC;
+}
+
+.duty-rights-1 {
+    width: 20%;
+}
+
+.duty-rights-3 {
+    width: 80%;
+}
+input[type='checkbox']{
+    margin-right: 10px;
+}
